# ModelForge

./: .gitignore  config.json  conv_model.h5  conv_model.keras  main.py  pyproject.toml  simple_model.h5  simple_model.keras
src/: main.py
src/constants/: menu_constants.py
src/services/: convert_service.py  quantize_service.py  transformers_service.py  wrapper.py
src/styles/: theme.py
src/ui/: mainwindow.py
src/ui/views/: load_view.py  optimize_view.py  train_view.py
