[project]
name = "model-forge"
version = "0.1.0"
description = "All in one place for MLOps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "onnxruntime>=1.23.2",
 "onnxscript>=0.5.7",
 "optimum[onnxruntime]>=2.1.0",
 "pyqt6>=6.10.1",
 "torch>=2.9.1",
 "torchvision>=0.24.1",
 "transformers>=4.57.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
model-forge = "main:main"

